<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:orientation="vertical"
    android:background="#c4c2c2"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/XTextView"
            android:layout_height="wrap_content"
            android:text="X:"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0"
            android:inputType="numberDecimal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Y:"
            android:id="@+id/YTextView"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Height:"
            android:id="@+id/ZTextView"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0"
            android:inputType="numberDecimal"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datum_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Spinner
            android:id="@+id/spinner_datum"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/datum_list"
            android:prompt="@string/datum"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:id="@+id/checkbox"
            android:layout_height="wrap_content"
            android:text="@string/epoch_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:button="@null"
            android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
            android:drawablePadding="150dp"
            android:onClick="displayEpoch"/>

        <EditText
            android:id="@+id/epochDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e0e0e0"
            android:maxLength="4"
            android:visibility="gone"
            android:inputType="number"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/transformation_technique"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner_transformation_technique"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@array/method_list"
            android:textAlignment="center"
            android:prompt="@string/technique"/>
        <TextView
            android:id="@+id/xyzText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:background="#e0e0e0"
            android:textSize="20sp" />
    </LinearLayout>
    <Button
        android:id="@+id/setTransformationOptions"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/set_option"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:background="#720D5D"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:onClick="getSelectedDisplay"/>
</RelativeLayout>